cmake_minimum_required(VERSION 2.8)
project( main )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( main main.cpp visualizer.cpp visualizer.h salle.cpp salle.h carte.cpp carte.h employer.cpp employer.h coord.cpp coord.h case.cpp case.h)
target_link_libraries( main ${OpenCV_LIBS} )
